--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
         <p class="text-center text-xs text-gray-400 mt-4">Technician LIFF v1.0</p>
     </div>
 
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
